chmod: api final commit
